fix for missing case studies on mobile

--- a/assets/scss/pages/case-studies.scss
+++ b/assets/scss/pages/case-studies.scss
@@ -591,8 +591,10 @@
             content: '';
             z-index: 2;
           }
-          &:nth-child(-n + 3) {
-            grid-column: span 2 / span 2;
+          @media screen and (min-width: 641px) {
+            &:nth-child(-n + 2) {
+              grid-column: span 2 / span 2;
+            }
           }
           a {
             position: absolute;
